# van-gogh-api

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  makefile  pyproject.toml  requirements.txt
app/: clients.py  dependency.py  exceptions.py  lifespan.py  models.py  routes.py  service.py  worker.py
app/auth/: keycloak.py
app/services/: docs.py
elasticSearch/: models.py  routes.py
