[project]
name = "van-gogh-dna-api"
version = "3.0.0"
description = "API for van-gogh-dna application."
authors = [
    {name = "Gabriele",email = "gabrielegiannessi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
